<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/CheckBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/checkbox1"/>

        <CheckBox
            android:id="@+id/CheckBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox2" />

        <CheckBox
            android:id="@+id/CheckBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox3" />

        <CheckBox
            android:id="@+id/CheckBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox4" />

        <CheckBox
            android:id="@+id/CheckBox5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox5" />

        <Button
            android:id="@+id/ShowToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Show_Toast_button"
            android:onClick="on_submit"
            app:backgroundTint="@color/purple_200" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>